[tool.poetry]
name = "pochi-base-image"
version = "0.2.3"
description = ""
authors = [
    "Yusuke James Yoshida  <>", 
    "Katsutoshi Tatsumi  <>",
    "Naomi Kaneko  <>",
    "Yusei Miura  <>"
]
maintainers = [
    "Yusei Miura  <yusei.miura.be@s1.nttdocomo.com>"
]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.1"
streamlit = "1.26.0"
pyyaml = "^6.0"
snowflake-connector-python = "^2.7.11"
snowflake-sqlalchemy = "^1.4.1"
sqlparse = "^0.4.2"
pyarrow = {version = "^8.0.0", extras = ["pandas"]}
streamlit-tree-select = "^0.0.5"
s3fs = "^2022.8.2"
Jinja2 = "^3.1.2"
google-cloud-secret-manager = "^2.12.4"
google-cloud-storage = "^2.6.0"
boto3 = "^1.24.59"
awswrangler = "^2.19.0"
python-jose = "^3.3.0"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"
gcsfs = "^2022.11.0"
matplotlib = "^3.6.3"
google-cloud-aiplatform = "^1.23.0"
cryptography = "==38.0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[tool.poetry.group.pochi-base]
optional = true
[tool.poetry.group.pochi-base.dependencies]
papermill = {extras = ["gcs"], version = "^2.4.0"}
ipykernel = "^6.21.2"
keyrings-google-artifactregistry-auth = "^1.1.1"

[tool.poetry.group.pochi-sklearn]
optional = true
[tool.poetry.group.pochi-sklearn.dependencies]
papermill = {extras = ["gcs"], version = "^2.4.0"}
ipykernel = "^6.21.2"
keyrings-google-artifactregistry-auth = "^1.1.1"
wget = "^3.2"
nbconvert = "^7.2.9"
scikit-image = "^0.19.3"
scikit-learn = "^1.2.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
plotly = "^5.13.0"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
lightgbm = "^3.3.5"
optuna = "^3.1.0"
jpholiday = "^0.1.8"
google-api-python-client = "^2.78.0"
psycopg2-binary = "^2.9.5"
google-cloud-bigquery = "^3.5.0"
more-itertools = "^9.0.0"

[build-system]
requires = ["setuptools", "poetry_core>=1.0.0"]
